src/objects/ValidPrice__c.object
<CustomObject>
    <description>This checks if the price is valid for the weekly price for Subscriptions</description>
    <fields>
        <fullName>CC_26_Weeks__c</fullName>
        <label>CC 26 Weeks</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_52_Weeks__c</fullName>
        <label>CC 52 Weeks</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Monthly_Price__c</fullName>
        <label>First Monthly Price</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ongoing_Monthly_Price__c</fullName>
        <label>Ongoing Monthly Price</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarterly_Price__c</fullName>
        <label>Quarterly Price</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>This identifies where the Subscription came from eg:DSOS allows all prices in Plan 0 and 1, whereas outside agents are only allowed a smaller range of price plans</description>
        <label>Source</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ValidPrice</label>
    <nameField>
        <displayFormat>VP{0000}</displayFormat>
        <label>ValidPrice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ValidPrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>